testing: get import path, specify build / test step
the import path was previously set to

    github.com/njwilson23/geojson.go

rather than

    github.com/njwilson/geojson

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,11 @@ go:
   - 1.6
   - 1.7.x
   - master
+
+go_import_path: github.com/njwilson23/geojson
+
+install:
+  - go build ./...
+
+script:
+  - go test ./...
